--- a/src/styles/landing/style.scss
+++ b/src/styles/landing/style.scss
@@ -5,10 +5,7 @@
 html,
 body,
 #app {
-  overflow: auto;
   height: auto;
 }
 
-.page__body {
-  overflow: visible;
-}
+// Правила прокрутки тепер централізовані в base.css
